src/webmin/csf/images/configserver.css
/* ... */
/*
	Animations › Health / Heart
*/

@keyframes health
{
    0%, 40%, 80%, 100%
	{
        transform: scale(1);
        color: #FFF;
        fill: #FFF !important;
    }

    20%, 60%
	{
        transform: scale(1.15);
        color: #FF6593;
        fill: #FF6593 !important;
    }
}

.heart
{
    animation: health 1000ms infinite;
}

/*
	Animations › Spin
*/

@-webkit-keyframes spin
{
	0% { -webkit-transform: rotate(0deg); }
	100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin
{
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

/*
	Helpers › Mobile
*/

.mobilecontainer
{
	display: none;
}

.normalcontainer
{
	display: block;
}

/*
	Helpers › Transitions

	Switching themes will produce a small animation.
	Certain elements should not have this animation or they look
	weird
*/

.no-transition *
{
    transition: none !important;
}

html.theme-transition *
{
    transition: all 0.1s ease-in-out;
}

/*
	Scrollbar › Chrome, Edge, Safari Support (Hide Scrollbar)
*/

.csf-container::-webkit-scrollbar
{
    display: none;
}

/*
	Scrollbar › Firefox Support (Hide Scrollbar)
*/

.csf-container
{
    scrollbar-width: none;
}

/*
	Scrollbar › Base
*/

.csf-scrollbar
{
    position: fixed;
    top: 0;
    right: 2px;
    width: 5px;
    border-radius: 6px;
    background: var( --scrollbar-background-n );
    cursor: pointer;
    height: 50px;
    z-index: 9999;
    margin: 7px;
    transition: background 0.4s ease;
}

/*
	Scrollbar › Hover
*/

.csf-scrollbar:hover
{
    background: var( --scrollbar-background-h );
}

/*
	Scrollbar › Active (Mousedown
*/

.csf-scrollbar:active
{
    background: var( --scrollbar-background-a );
}

/*
	Scrollbar › Container scrolling
*/

.csf-container
{
    height: 100%;
    overflow-y: scroll;
    padding-right: 20px;
    box-sizing: content-box;
}

.csf-container::-webkit-scrollbar
{
	display: none;
}

.icon-configserver
{
	color: #990000;
}

/*
	Scrollbar › Firefox Support
*/

*
{
    scrollbar-width: auto;
	scrollbar-color: var( --scrollbar-background-n );
}

/*
	Body
*/

body
{
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    line-height: 1.42857143;
    color: var( --general-page-text-n );
    background-color: var( --general-page-background );
}

/*
	Horizontal Line
*/

hr
{
	margin-top: 20px;
	margin-bottom: 20px;
	border-top: 1px solid var( --general-page-background );
	box-sizing: content-box;
}

.mark, mark
{
	background-color: var( --mark-background-n );
	color: var( --mark-text-n );
	padding-left: 5px;
	padding-right: 5px;
	border-radius: 4px;
	padding-top: 4px;
	padding-bottom: 2px;
}

/*
	Logo

	Live 		: /usr/sbin/lfd
	Source		: /src/lfd.pl
*/

img.logo
{
	width: 						53px;
	height: 					auto;
}

img.logo:hover
{
	animation-name:             fade-in, scale-in;
	animation-duration:         1s, 0.5s;
	animation-timing-function:  ease-in, linear;
	animation-direction:        alternate, alternate;
	animation-iteration-count:  infinite, 1;
	transition: 				all 0.2s;
	transform: 					scale(1.1);
}

img.logo:not(:hover)
{
	transition: 				all 0.2s;
	transform: 					scale(1);
}

/*
	App Data
*/

a.app-name
{
	color: var( --general-app-name-text-n );
	text-decoration: none;
}

a.app-name:hover
{
	color: var( --general-app-name-text-h );
	text-decoration: none;
	transition: all 0.7s;
}

a.app-name:not(:hover)
{
	transition: all 0.2s;
	text-decoration: none;
	color: var( --general-app-name-text-n );
}

.app-info
{
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding-top: 16px;
	padding-left: 13px;
}

.app-name
{
    font-size: 18px;
    font-weight: 100;
    color: var( --general-app-name-text-n );
}

.app-version
{
    font-size: 12px;
    color: var( --text-muted-color );
}

/*
	CSF v1.0 › Defaults

	These are the default style properties from the original configserver.css
*/

.btn-default:active,
.btn-default:visited,
.btn-default:focus,
.btn-default
{
	background: 		var( --btn-1-bg-n );
	border-radius:		3px;
	border:				1px solid var( --btn-1-border-n );
	color:				var( --btn-1-text-n ) !important;
}

.btn-default:hover
{
	border:				1px solid var( --btn-1-border-h );
	background: 		var( --btn-1-bg-n );
}

.btn-default.disabled.focus, .btn-default.disabled:focus, .btn-default.disabled:hover, .btn-default[disabled].focus, .btn-default[disabled]:focus, .btn-default[disabled]:hover, fieldset[disabled] .btn-default.focus, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default:hover
{
	background-color: 	var( --btn-1-bg-d ) !important;
	border-color: 		var( --btn-1-border-d ) !important;
	color: 				var( --btn-1-text-d ) !important;
}

/*
	Toggle › Enabled › Normal
*/

.btn.btn-default.option-enabled
{
	background-color: var( --btn-1-bg-n );
	color: var( --btn-1-text-n );
	border-color: var( --btn-1-border-n );
}

/*
	Toggle › Enabled › Active
*/

.btn.btn-default.option-enabled.active
{
	background-color: var( --btn-def-enabled-bg-n ) !important;
	color: var( --btn-def-enabled-text-n );
}

/*
	Toggle › Disabled › Normal
*/

.btn.btn-default.option-disabled
{
	background-color: var( --btn-1-bg-d );
	color: var( --btn-1-text-d );
	border-color: var( --btn-1-border-d );
}

/*
	Toggle › Disabled › Active
*/

.btn.btn-default.option-disabled.active
{
	background-color: var( --btn-def-disabled-bg-n ) !important;
	color: var( --btn-def-disabled-text-n );
}

/*
	Button › Default › Active 

	Not used for buttons on home page.
*/

.btn.btn-default.active
{
	background-color: var( --btn-def-enabled-bg-n ) !important;
	color: var( --btn-def-enabled-text-n );
}

/*
	Button › Default › Normal
	
	On the home page, all buttons will be given this style.
*/

.btn.btn-default:not(.active)
{
	background-color: var( --btn-1-bg-n );
	color: var( --btn-1-text-n );
	border-color: var( --btn-1-border-n );
}
/* ... */

